--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
        More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Dibyendu Nath | Dev : Homepage</title>
-  <meta name="description" content="Personal Website of Dibyendu Nath, better known as 'Dev' - Coder at-large. Software Craftsmith at Google by day, brooding painter by night. Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost). Occasional Fauxtographer, with a pretty bad case of Epicurea.">
-  <meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,cloud,santa barbara,google">
+  <title>Dev Nath | Homepage</title>
+  <meta name="description" content="Personal Website of Dev Nath - Coder at-large. Software Craftsmith at Google by day, brooding painter by night. Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost). Occasional Fauxtographer, with a pretty bad case of Epicurea.">
+  <meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,d3vnath, racelab,stochss,ucsb,cloud,santa barbara,google">
   <meta name="author" content="humans.txt">
 
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
@@ -25,14 +25,14 @@
   <!-- Facebook Metadata /-->
   <meta property="fb:page_id" content="">
   <meta property="fb:admins" content="100001639762906" />
-  <meta property="og:image" content="http://dnath.github.io/img/dibyendu_nath.jpg">
-  <meta property="og:description" content="Personal Website of Dibyendu Nath, better known as 'Dev' - Coder at-large. Software Craftsmith at Google by day, brooding painter by night. Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost). Occasional Fauxtographer, with a pretty bad case of Epicurea.">
-  <meta property="og:title" content="Dibyendu Nath | Dev : Homepage">
+  <meta property="og:image" content="http://dnath.github.io/img/dev_nath.jpg">
+  <meta property="og:description" content="Personal Website of Dev Nath - Coder at-large. Software Craftsmith at Google by day, brooding painter by night. Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost). Occasional Fauxtographer, with a pretty bad case of Epicurea.">
+  <meta property="og:title" content="Dev Nath | Homepage">
 
   <!-- Google+ Metadata /-->
-  <meta itemprop="name" content="Dibyendu Nath | Dev : Homepage">
-  <meta itemprop="description" content="Personal Website of Dibyendu Nath, better known as 'Dev' - Coder at-large. Software Craftsmith at Google by day, brooding painter by night. Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost). Occasional Fauxtographer, with a pretty bad case of Epicurea.">
-  <meta itemprop="image" content="http://dnath.github.io/img/dibyendu_nath.jpg">
+  <meta itemprop="name" content="Dev Nath | Homepage">
+  <meta itemprop="description" content="Personal Website of Dev Nath - Coder at-large. Software Craftsmith at Google by day, brooding painter by night. Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost). Occasional Fauxtographer, with a pretty bad case of Epicurea.">
+  <meta itemprop="image" content="http://dnath.github.io/img/dev_nath.jpg">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
@@ -54,7 +54,7 @@
       <a class="toggle" gumby-trigger="#nav1 &gt; .row &gt; ul" href="#"><i class="icon-menu"></i></a>
       <h1 class="four columns logo">
         <a href="http://dnath.github.io/">
-        <img alt="Dev | Dibyendu Nath" src="img/dev_dnath_logo.png" gumby-retina="">
+        <img alt="Dev Nath" src="img/dev_dnath_logo.png" gumby-retina="">
         </a>
       </h1>
       <ul class="eight columns main-nav">
@@ -84,7 +84,7 @@
       </a>
     </div>
     <div class="metro btn linkedin pull_right">
-      <a target="_blank" href="https://www.linkedin.com/in/dibyendunath">
+      <a target="_blank" href="https://www.linkedin.com/in/d3vnath">
         <i class="social icon-linkedin"></i><span class="hide">LinkedIn | Dev Nath</span>
       </a>
     </div>
@@ -100,14 +100,14 @@
   <div class="row padding_top_20">
   <div class="four columns">
     <div class="image rounded">
-    <img src="img/dibyendu_nath.jpg" alt="Dibyendu Nath | Dev"/>
+    <img src="img/dev_nath.jpg" alt="Dev Nath"/>
     </div>
     <h5 class=""><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</h5> 
   </div>
   <article class="eight columns padding_bottom_20">
     <h2>Hello, World !</h2>
     
-    <p>Hi, I'm <strong>Dibyendu</strong>, also known as <strong>Dev</strong>. First things first, a small intro from yours truly. To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ... half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:) one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
+    <p>Hi, I'm <strong>Dibyendu</strong>, better known as <strong>Dev</strong>. First things first, a small intro from yours truly. To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ... half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:) one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
 
     <p>I'm a Software Engineer at <a class="red_glow" href="http://www.google.com">Google,</a> based out of Mountain View, California, working on Google Shopping infrastructure. Till quite recently, I was a graduate student at the <a class="red_glow" href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a class="red_glow" href="http://www.cs.ucsb.edu">Computer Science.</a> I was working in <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>, advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a> and <a class="red_glow" href="http://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a> Before that, I was a Software Engineering Intern at <a class="red_glow" href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team.
   </article>
@@ -152,7 +152,7 @@
   <a target="_blank" class="social_footer" href="https://www.facebook.com/d3vnath">
     <i class="icon-facebook-squared no_margin"></i>Facebook<span class="hide">Facebook | Dev Nath</span>
   </a> |
-  <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/dibyendunath">
+  <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/d3vnath">
     <i class="icon-linkedin no_margin"></i>LinkedIn<span class="hide">LinkedIn | Dev Nath</span>
   </a> | 
   <a target="_blank" class="social_footer" href="https://github.com/dnath">
@@ -177,7 +177,7 @@
 <div class="wrapper shaded footer">
   <div class="row">
   <div class="pull_left">
-    <strong>Dibyendu Nath &copy; 2016</strong> 
+    <strong>Dev Nath &copy; 2016</strong> 
   </div>
   <div class="pull_right">
     <strong>January 2016</strong> 
