--- a/research.html
+++ b/research.html
@@ -15,9 +15,9 @@
        More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Dibyendu Nath | Dev : Research</title>
-  <meta name="description" content="Research | Dibyendu 'Dev' Nath, Coder at-large. Software Engineer at Google, Recent CS Graduate from University of California, Santa Barbara.">
-  <meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,google,cloud computing,distributed systems,systems,data mining,analytics">
+  <title>Dev Nath | Research</title>
+  <meta name="description" content="Research | Dev Nath, Coder at-large. Software Engineer at Google, Recent CS Graduate from University of California, Santa Barbara.">
+  <meta name="keywords" content="dev,dibyendu,nath,d3vnath,dnath,devnath,racelab,stochss,ucsb,google,cloud computing,distributed systems,systems,data mining,analytics">
   <meta name="author" content="humans.txt">
 
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
@@ -25,14 +25,14 @@
   <!-- Facebook Metadata /-->
   <meta property="fb:page_id" content="">
   <meta property="fb:admins" content="100001639762906" />
-  <meta property="og:image" content="http://dnath.github.io/img/dibyendu_nath.jpg">
-  <meta property="og:description" content="Research | Dibyendu 'Dev' Nath, Coder at-large. Software Engineer at Google, Recent CS Graduate from University of California, Santa Barbara.">
-  <meta property="og:title" content="Dibyendu Nath | Dev : Research">
+  <meta property="og:image" content="http://dnath.github.io/img/dev_nath.jpg">
+  <meta property="og:description" content="Research | Dev Nath, Coder at-large. Software Engineer at Google, Recent CS Graduate from University of California, Santa Barbara.">
+  <meta property="og:title" content="Dev Nath | Research">
 
   <!-- Google+ Metadata /-->
-  <meta itemprop="name" content="Dibyendu Nath | Dev : Research">
-  <meta itemprop="description" content="Research | Dibyendu 'Dev' Nath, Coder at-large. Software Engineer at Google, Recent CS Graduate from University of California, Santa Barbara.">
-  <meta itemprop="image" content="http://dnath.github.io/img/dibyendu_nath.jpg">
+  <meta itemprop="name" content="Dev Nath | Research">
+  <meta itemprop="description" content="Research | Dev Nath, Coder at-large. Software Engineer at Google, Recent CS Graduate from University of California, Santa Barbara.">
+  <meta itemprop="image" content="http://dnath.github.io/img/dev_nath.jpg">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
@@ -51,7 +51,7 @@
     <div class="row">
       <a class="toggle" gumby-trigger="#nav1 &gt; .row &gt; ul" href="#"><i class="icon-menu"></i></a>
       <h1 class="four columns logo">
-        <a href="http://dnath.github.io/"><img alt="Dev | Dibyendu Nath" src="img/dev_dnath_logo.png" gumby-retina=""></a>
+        <a href="http://dnath.github.io/"><img alt="Dev Nath" src="img/dev_dnath_logo.png" gumby-retina=""></a>
       </h1>
       <ul class="eight columns main-nav">
         <li class="pull_right padding_left_20">
@@ -80,7 +80,7 @@
       </a>
     </div>
     <div class="metro btn linkedin pull_right">
-      <a target="_blank" href="https://www.linkedin.com/in/dibyendunath">
+      <a target="_blank" href="https://www.linkedin.com/in/d3vnath">
         <i class="social icon-linkedin"></i><span class="hide">LinkedIn | Dev Nath</span>
       </a>
     </div>
@@ -174,7 +174,7 @@
   <a target="_blank" class="social_footer" href="https://www.facebook.com/d3vnath">
     <i class="icon-facebook-squared no_margin"></i>Facebook<span class="hide">Facebook | Dev Nath</span>
   </a> |
-  <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/dibyendunath">
+  <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/d3vnath">
     <i class="icon-linkedin no_margin"></i>LinkedIn<span class="hide">LinkedIn | Dev Nath</span>
   </a> | 
   <a target="_blank" class="social_footer" href="https://github.com/dnath">
@@ -199,7 +199,7 @@
 <div class="wrapper shaded footer">
   <div class="row">
   <div class="pull_left">
-    <strong>Dibyendu Nath &copy; 2016</strong> 
+    <strong>Dev Nath &copy; 2016</strong> 
   </div>
   <div class="pull_right">
     <strong>January 2016</strong> 
