--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if IE 9]>    <html class="no-js ie9" lang="en"> <![endif]-->
 <!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 9]><!--> 
+<!--[if gt IE 9]><!-->
 <html class="no-js" lang="en" itemscope="" itemtype="http://schema.org/Product">
 <!--<![endif]-->
 <head>
@@ -46,7 +46,7 @@
 <body>
 <!-- super wrapper : start -->
 <div class="super_wrapper">
-  
+
   <!-- navbar -->
   <div class="navcontain">
     <div class="navbar" gumby-fixed="top" id="nav1">
@@ -69,7 +69,7 @@
     </div>
   </div>
   <!-- navbar -->
-  
+
   <!-- social -->
   <div class="wrapper shaded">
   <div class="row">
@@ -82,12 +82,12 @@
       </a>
     </div>
     <div class="metro btn linkedin pull_right">
-      <a target="_blank" href="https://www.linkedin.com/in/d3vnath">
+      <a target="_blank" href="https://www.linkedin.com/in/dev-nath">
         <i class="social icon-linkedin"></i><span class="hide">LinkedIn | Dev Nath</span>
       </a>
     </div>
     <div class="metro btn twitter pull_right">
-      <a target="_blank" href="https://twitter.com/d3vnath">
+      <a target="_blank" href="https://twitter.com/askdevnath">
         <i class="social icon-twitter"></i><span class="hide">Twitter | Dev Nath</span>
       </a>
     </div>
@@ -96,7 +96,7 @@
   <!-- social -->
 
   <div class="row padding_top_20">
-    
+
     <!-- Google -->
     <div class="row">
       <div class="three columns image rounded text_center">
@@ -106,7 +106,7 @@
             <a class="default_color red_glow" href="http://www.google.com/">
               <i class="icon-globe"></i>Google Inc.
             </a>
-          </h5> 
+          </h5>
         </div>
       </div>
       <article class="nine columns">
@@ -130,7 +130,7 @@
             <a class="default_color red_glow" href="http://www.appfolio.com/">
               <i class="icon-globe"></i>AppFolio Inc.
             </a>
-          </h5> 
+          </h5>
         </div>
       </div>
       <article class="nine columns">
@@ -155,7 +155,7 @@
         </div>
       </article>
     </div>
-    
+
     <!-- McAfee -->
     <div class="row padding_top_40">
       <div class="three columns image rounded text_center">
@@ -164,7 +164,7 @@
           <h5 class="text_center">
             <a class="default_color red_glow" href="http://www.mcafee.com/us/products/complete-data-protection.aspx"><i class="icon-globe"></i>McAfee Complete Data Protection</a>
           </h5>
-          <h6 class="text_center">Formerly known as <br/>McAfee EEFF</h6> 
+          <h6 class="text_center">Formerly known as <br/>McAfee EEFF</h6>
         </div>
       </div>
       <article class="nine columns">
@@ -197,43 +197,43 @@
   <div class="text_center social_footer_box">
   <a target="_blank" class="social_footer" href="https://twitter.com/d3vnath">
     <i class="icon-twitter no_margin"></i>Twitter<span class="hide">Twitter | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://www.facebook.com/d3vnath">
     <i class="icon-facebook-squared no_margin"></i>Facebook<span class="hide">Facebook | Dev Nath</span>
   </a> |
   <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/d3vnath">
     <i class="icon-linkedin no_margin"></i>LinkedIn<span class="hide">LinkedIn | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://github.com/dnath">
     <i class="icon-github no_margin"></i>Github<span class="hide">GitHub | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB">
     <i class="icon-gplus no_margin"></i>Google+<span class="hide">Google+ | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://www.instagram.com/dev.nath">
     <i class="icon-instagram no_margin"></i>Instagram<span class="hide">Instagram | Dev Nath</span>
   </a>
-  </div> 
+  </div>
   </div>
 
   <!-- padding for footer -->
   <div class="row footer_padding"></div>
-  
+
 </div>
 <!-- super wrapper : end -->
 
-<!-- footer : start -->  
+<!-- footer : start -->
 <div class="wrapper shaded footer">
   <div class="row">
   <div class="pull_left">
-    <strong>Dev Nath &copy; 2016</strong> 
+    <strong>Dev Nath &copy; 2016</strong>
   </div>
   <div class="pull_right">
-    <strong>January 2016</strong> 
+    <strong>January 2016</strong>
   </div>
   </div>
 </div>
-<!-- footer : end --> 
+<!-- footer : end -->
 
 <!-- Grab Google CDN's jQuery, fall back to local if offline -->
 <!-- 2.0 for modern browsers, 1.10 for .oldie -->
