--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if IE 9]>    <html class="no-js ie9" lang="en"> <![endif]-->
 <!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 9]><!--> 
+<!--[if gt IE 9]><!-->
 <html class="no-js" lang="en" itemscope="" itemtype="http://schema.org/Product">
 <!--<![endif]-->
 <head>
@@ -46,7 +46,7 @@
 <body>
 <!-- super wrapper : start -->
 <div class="super_wrapper">
-  
+
   <!-- navbar -->
   <div class="navcontain">
     <div class="navbar" gumby-fixed="top" id="nav1">
@@ -71,7 +71,7 @@
     </div>
   </div>
   <!-- navbar -->
-  
+
   <!-- social -->
   <div class="wrapper shaded">
   <div class="row">
@@ -84,29 +84,29 @@
       </a>
     </div>
     <div class="metro btn linkedin pull_right">
-      <a target="_blank" href="https://www.linkedin.com/in/d3vnath">
+      <a target="_blank" href="https://www.linkedin.com/in/dev-nath">
         <i class="social icon-linkedin"></i><span class="hide">LinkedIn | Dev Nath</span>
       </a>
     </div>
     <div class="metro btn twitter pull_right">
-      <a target="_blank" href="https://twitter.com/d3vnath">
+      <a target="_blank" href="https://twitter.com/askdevnath">
         <i class="social icon-twitter"></i><span class="hide">Twitter | Dev Nath : @d3vnath</span>
       </a>
     </div>
   </div>
   </div>
   <!-- social -->
-  
+
   <div class="row padding_top_20">
   <div class="four columns">
     <div class="image rounded">
     <img src="img/dev_nath.jpg" alt="Dev Nath"/>
     </div>
-    <h5 class=""><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</h5> 
+    <h5 class=""><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</h5>
   </div>
   <article class="eight columns padding_bottom_20">
     <h2>Hello, World !</h2>
-    
+
     <p>Hi, I'm <strong>Dibyendu</strong>, better known as <strong>Dev</strong>. First things first, a small intro from yours truly. To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ... half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:) one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
 
     <p>I'm a Software Engineer at <a class="red_glow" href="http://www.google.com">Google,</a> based out of Mountain View, California, working on Google Shopping infrastructure. Till quite recently, I was a graduate student at the <a class="red_glow" href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a class="red_glow" href="http://www.cs.ucsb.edu">Computer Science.</a> I was working in <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>, advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a> and <a class="red_glow" href="http://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a> Before that, I was a Software Engineering Intern at <a class="red_glow" href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team.
@@ -123,7 +123,7 @@
     fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
     </script>
     </div>
-     
+
     <div class="eight columns padding_left_20 padding_top_20">
       <div class="five columns image text_center">
         <a target="_blank" href="http://www.ucsb.edu/">
@@ -148,43 +148,43 @@
   <div class="text_center social_footer_box">
   <a target="_blank" class="social_footer" href="https://twitter.com/d3vnath">
     <i class="icon-twitter no_margin"></i>Twitter<span class="hide">Twitter | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://www.facebook.com/d3vnath">
     <i class="icon-facebook-squared no_margin"></i>Facebook<span class="hide">Facebook | Dev Nath</span>
   </a> |
   <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/d3vnath">
     <i class="icon-linkedin no_margin"></i>LinkedIn<span class="hide">LinkedIn | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://github.com/dnath">
     <i class="icon-github no_margin"></i>Github<span class="hide">GitHub | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB">
     <i class="icon-gplus no_margin"></i>Google+<span class="hide">Google+ | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://www.instagram.com/dev.nath">
     <i class="icon-instagram no_margin"></i>Instagram<span class="hide">Instagram | Dev Nath</span>
   </a>
-  </div> 
   </div>
-   
+  </div>
+
   <!-- padding for footer -->
   <div class="row footer_padding"></div>
 
 </div>
 <!-- super wrapper : end -->
 
-<!-- footer : start -->  
+<!-- footer : start -->
 <div class="wrapper shaded footer">
   <div class="row">
   <div class="pull_left">
-    <strong>Dev Nath &copy; 2016</strong> 
+    <strong>Dev Nath &copy; 2016</strong>
   </div>
   <div class="pull_right">
-    <strong>January 2016</strong> 
+    <strong>January 2016</strong>
   </div>
   </div>
 </div>
-<!-- footer : end --> 
+<!-- footer : end -->
 
 <!-- Grab Google CDN's jQuery, fall back to local if offline -->
 <!-- 2.0 for modern browsers, 1.10 for .oldie -->
