--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if IE 9]>    <html class="no-js ie9" lang="en"> <![endif]-->
 <!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 9]><!--> 
+<!--[if gt IE 9]><!-->
 <html class="no-js" lang="en" itemscope="" itemtype="http://schema.org/Product">
 <!--<![endif]-->
 <head>
@@ -67,7 +67,7 @@
     </div>
   </div>
   <!-- navbar -->
-  
+
   <!-- social -->
   <div class="wrapper shaded">
   <div class="row">
@@ -80,12 +80,12 @@
       </a>
     </div>
     <div class="metro btn linkedin pull_right">
-      <a target="_blank" href="https://www.linkedin.com/in/d3vnath">
+      <a target="_blank" href="https://www.linkedin.com/in/dev-nath">
         <i class="social icon-linkedin"></i><span class="hide">LinkedIn | Dev Nath</span>
       </a>
     </div>
     <div class="metro btn twitter pull_right">
-      <a target="_blank" href="https://twitter.com/d3vnath">
+      <a target="_blank" href="https://twitter.com/askdevnath">
         <i class="social icon-twitter"></i><span class="hide">Twitter | Dev Nath</span>
       </a>
     </div>
@@ -102,21 +102,21 @@
             <a class="default_color red_glow" href="http://www.stochss.org/">
               <i class="icon-globe"></i>StochSS.org
             </a>
-          </h5> 
+          </h5>
           <h5 class="text_center">
             <a class="default_color red_glow" href="https://github.com/stochss/stochss">
               <i class="icon-github"></i>github.com/stochss
             </a>
-          </h5> 
+          </h5>
         </div>
       </div>
       <article class="eight columns">
         <div class="row">
           <h3><strong>StochSS:</strong> Stochastic Simulation as a Service</h3>
-          <h5>Advisors: <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz">Prof. Chandra Krintz,</a> 
+          <h5>Advisors: <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz">Prof. Chandra Krintz,</a>
             <a class="red_glow" href="http://www.cs.ucsb.edu/~rich">Prof. Rich Wolski</a></h5>
           <h6>
-            <a class="default_color red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab,</a> 
+            <a class="default_color red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab,</a>
             <a class="default_color red_glow" href="http://www.ucsb.edu/">UC Santa Barbara</a></h6>
         </div>
         <div class="padding_top_10">
@@ -139,7 +139,7 @@
             <a class="default_color red_glow" href="http://terrier.org/">
               <i class="icon-globe"></i>Terrier.org
             </a>
-          </h5> 
+          </h5>
         </div>
       </div>
       <article class="eight columns">
@@ -170,43 +170,43 @@
   <div class="text_center social_footer_box">
   <a target="_blank" class="social_footer" href="https://twitter.com/d3vnath">
     <i class="icon-twitter no_margin"></i>Twitter<span class="hide">Twitter | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://www.facebook.com/d3vnath">
     <i class="icon-facebook-squared no_margin"></i>Facebook<span class="hide">Facebook | Dev Nath</span>
   </a> |
   <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/d3vnath">
     <i class="icon-linkedin no_margin"></i>LinkedIn<span class="hide">LinkedIn | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://github.com/dnath">
     <i class="icon-github no_margin"></i>Github<span class="hide">GitHub | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB">
     <i class="icon-gplus no_margin"></i>Google+<span class="hide">Google+ | Dev Nath</span>
-  </a> | 
+  </a> |
   <a target="_blank" class="social_footer" href="https://www.instagram.com/dev.nath">
     <i class="icon-instagram no_margin"></i>Instagram<span class="hide">Instagram | Dev Nath</span>
   </a>
-  </div> 
   </div>
-   
+  </div>
+
   <!-- padding for footer -->
   <div class="row footer_padding"></div>
 
 </div>
 <!-- super wrapper : end -->
 
-<!-- footer : start -->  
+<!-- footer : start -->
 <div class="wrapper shaded footer">
   <div class="row">
   <div class="pull_left">
-    <strong>Dev Nath &copy; 2016</strong> 
+    <strong>Dev Nath &copy; 2016</strong>
   </div>
   <div class="pull_right">
-    <strong>January 2016</strong> 
+    <strong>January 2016</strong>
   </div>
   </div>
 </div>
-<!-- footer : end --> 
+<!-- footer : end -->
 
 <!-- Grab Google CDN's jQuery, fall back to local if offline -->
 <!-- 2.0 for modern browsers, 1.10 for .oldie -->
