Jekyll Reboot part 1

--- a/index.html
+++ b/index.html
@@ -1,240 +1,82 @@
+---
+title:  Homepage
+description:  >
+  Personal Website of Dev Nath - Coder at-large.
+  Software Craftsmith at Google by day, brooding painter by night.
+  Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost).
+  Occasional Fauxtographer, with a pretty bad case of Epicurea.
+keywords: >
+  dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,cloud,
+  santa barbara,google
+---
 <!doctype html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if IE 9]>    <html class="no-js ie9" lang="en"> <![endif]-->
-<!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 9]><!-->
-<html class="no-js" lang="en" itemscope="" itemtype="http://schema.org/Product">
-<!--<![endif]-->
+<html>
 <head>
-  <meta charset="utf-8">
-
-  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-       More info: h5bp.com/b/378 -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title>Dev Nath | Homepage</title>
-  <meta name="description" content="Personal Website of Dev Nath - Coder at-large. Software Craftsmith at Google by day, brooding painter by night. Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost). Occasional Fauxtographer, with a pretty bad case of Epicurea.">
-  <meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,d3vnath, racelab,stochss,ucsb,cloud,santa barbara,google">
-  <meta name="author" content="humans.txt">
-
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-
-  <!-- Facebook Metadata /-->
-  <meta property="fb:page_id" content="">
-  <meta property="fb:admins" content="100001639762906" />
-  <meta property="og:image" content="http://dnath.github.io/img/dev_nath.jpg">
-  <meta property="og:description" content="Personal Website of Dev Nath - Coder at-large. Software Craftsmith at Google by day, brooding painter by night. Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost). Occasional Fauxtographer, with a pretty bad case of Epicurea.">
-  <meta property="og:title" content="Dev Nath | Homepage">
-
-  <!-- Google+ Metadata /-->
-  <meta itemprop="name" content="Dev Nath | Homepage">
-  <meta itemprop="description" content="Personal Website of Dev Nath - Coder at-large. Software Craftsmith at Google by day, brooding painter by night. Rebellious dreamer, wilful Wanderer (with a doctorate in getting lost). Occasional Fauxtographer, with a pretty bad case of Epicurea.">
-  <meta itemprop="image" content="http://dnath.github.io/img/dev_nath.jpg">
-
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
-  <link rel="stylesheet" href="bower_components/gumby/css/gumby.css">
-
-  <script src="bower_components/gumby/js/libs/modernizr-2.6.2.min.js"></script>
-
-  <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+{% include head.html %}
 </head>
-
 <body>
-<!-- super wrapper : start -->
+
 <div class="super_wrapper">
+{% include header.html %}
 
-  <!-- navbar -->
-  <div class="navcontain">
-    <div class="navbar" gumby-fixed="top" id="nav1">
-    <div class="row">
-      <a class="toggle" gumby-trigger="#nav1 &gt; .row &gt; ul" href="#"><i class="icon-menu"></i></a>
-      <h1 class="four columns logo">
-        <a href="http://dnath.github.io/">
-        <img alt="Dev Nath" src="img/dev_dnath_logo.png" gumby-retina="">
-        </a>
-      </h1>
-      <ul class="eight columns main-nav">
-        <li class="pull_right padding_left_20">
-          <p class="medium pretty default btn icon-github icon-left">
-            <a target="_blank" href="https://github.com/dnath">GitHub</a>
-          </p>
-        </li>
-        <li class="pull_right"><a href="projects.html">Projects</a></li>
-        <li class="pull_right"><a href="research.html">Research</a></li>
-        <li class="pull_right"><a href="#">Home</a></li>
-      </ul>
-    </div>
-    </div>
+<div class="row padding_top_20">
+<div class="four columns">
+  <div class="image rounded">
+  <img src="img/devnath.jpg" alt="{{ site.fullname }}"/>
   </div>
-  <!-- navbar -->
-
-  <!-- social -->
-  <div class="wrapper shaded">
-  <div class="row">
-    <div class="metro btn default rounded pull_left">
-      <a href="files/resume_dibyendu_nath.pdf">Resume <i class="icon-download"></i></a>
-    </div>
-    <div class="metro btn gplus pull_right">
-      <a target="_blank" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB">
-        <i class="social icon-gplus"></i><span class="hide">Google+ | Dev Nath</span>
-      </a>
-    </div>
-    <div class="metro btn linkedin pull_right">
-      <a target="_blank" href="https://www.linkedin.com/in/dev-nath">
-        <i class="social icon-linkedin"></i><span class="hide">LinkedIn | Dev Nath</span>
-      </a>
-    </div>
-    <div class="metro btn twitter pull_right">
-      <a target="_blank" href="https://twitter.com/askdevnath">
-        <i class="social icon-twitter"></i><span class="hide">Twitter | Dev Nath : @d3vnath</span>
-      </a>
-    </div>
-  </div>
-  </div>
-  <!-- social -->
-
-  <div class="row padding_top_20">
-  <div class="four columns">
-    <div class="image rounded">
-    <img src="img/dev_nath.jpg" alt="Dev Nath"/>
-    </div>
-    <h5 class=""><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</h5>
-  </div>
-  <article class="eight columns padding_bottom_20">
-    <h2>Hello, World !</h2>
-
-    <p>Hi, I'm <strong>Dibyendu</strong>, better known as <strong>Dev</strong>. First things first, a small intro from yours truly. To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ... half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:) one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
-
-    <p>I'm a Software Engineer at <a class="red_glow" href="http://www.google.com">Google,</a> based out of Mountain View, California, working on Google Shopping infrastructure. Till quite recently, I was a graduate student at the <a class="red_glow" href="http://www.ucsb.edu">University of California, Santa Barbara,</a> pursuing a Master's in <a class="red_glow" href="http://www.cs.ucsb.edu">Computer Science.</a> I was working in <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">RACE Lab</a>, advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a> and <a class="red_glow" href="http://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a> Before that, I was a Software Engineering Intern at <a class="red_glow" href="http://www.appfolio.com">AppFolio,</a> working on their data analytics team.
-  </article>
-  </div>
-
-  <div class="row">
-    <!-- Twitter Timeline -->
-    <div class="four columns padding_top_20 text_center">
-    <a class="twitter-timeline" width="360" height="600" href="https://twitter.com/d3vnath" data-widget-id="287681856625836032">Tweets by @d3vnath</a>
-    <script>
-    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];
-    if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";
-    fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-    </script>
-    </div>
-
-    <div class="eight columns padding_left_20 padding_top_20">
-      <div class="five columns image text_center">
-        <a target="_blank" href="http://www.ucsb.edu/">
-          <img src="img/ucsbwave-blue.png" alt="University of California, Santa Barbara">
-        </a>
-      </div>
-      <div class="two columns image text_center">
-        <a target="_blank" href="http://cs.ucsb.edu/">
-          <img src="img/ucsb_cs_logo.png" alt="UCSB Computer Science">
-        </a>
-      </div>
-      <div class="three columns image text_center">
-        <a target="_blank" href="http://www.cs.ucsb.edu/~ckrintz/racelab.html">
-          <img src="img/racelab_logo.png" alt="RACE Lab, UC Santa Barbara">
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- social footer -->
-  <div class="row">
-  <div class="text_center social_footer_box">
-  <a target="_blank" class="social_footer" href="https://twitter.com/d3vnath">
-    <i class="icon-twitter no_margin"></i>Twitter<span class="hide">Twitter | Dev Nath</span>
-  </a> |
-  <a target="_blank" class="social_footer" href="https://www.facebook.com/d3vnath">
-    <i class="icon-facebook-squared no_margin"></i>Facebook<span class="hide">Facebook | Dev Nath</span>
-  </a> |
-  <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/d3vnath">
-    <i class="icon-linkedin no_margin"></i>LinkedIn<span class="hide">LinkedIn | Dev Nath</span>
-  </a> |
-  <a target="_blank" class="social_footer" href="https://github.com/dnath">
-    <i class="icon-github no_margin"></i>Github<span class="hide">GitHub | Dev Nath</span>
-  </a> |
-  <a target="_blank" class="social_footer" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB">
-    <i class="icon-gplus no_margin"></i>Google+<span class="hide">Google+ | Dev Nath</span>
-  </a> |
-  <a target="_blank" class="social_footer" href="https://www.instagram.com/dev.nath">
-    <i class="icon-instagram no_margin"></i>Instagram<span class="hide">Instagram | Dev Nath</span>
-  </a>
-  </div>
-  </div>
-
-  <!-- padding for footer -->
-  <div class="row footer_padding"></div>
-
+  <h5 class=""><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</h5>
 </div>
-<!-- super wrapper : end -->
+<article class="eight columns padding_bottom_20">
+<h2>Hello, World !</h2>
 
-<!-- footer : start -->
-<div class="wrapper shaded footer">
-  <div class="row">
-  <div class="pull_left">
-    <strong>Dev Nath &copy; 2016</strong>
+<p>Hi, I'm <strong>Dev</strong>.
+First things first, a small intro from yours truly.
+To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ...
+half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:)
+one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
+
+<p>I'm a Software Engineer at
+<a class="red_glow" href="https://www.google.com">Google,</a>
+based out of Mountain View, California, working on Google Shopping Ads Serving
+infrastructure. Till quite recently, I was a graduate student at the
+<a class="red_glow" href="{{ site.ucsb_url }}">University of California, Santa Barbara,</a>
+pursuing a Master's in <a class="red_glow" href="{{ site.ucsb_cs_url }}">Computer Science.</a>
+I was working in <a class="red_glow" href="{{ site.ucsb_racelab_url }}">RACE Lab</a>,
+advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
+and <a class="red_glow" href="https://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a>
+Before that, I was a Software Engineering Intern at
+'<a class="red_glow" href="https://www.appfolio.com">AppFolio,</a>
+working on their data analytics team.
+</article>
+</div>
+
+<!-- Twitter and logos -->
+<div class="row">
+{% include twitter_timeline.html %}
+<div class="eight columns padding_left_20 padding_top_20">
+  <div class="five columns image text_center">
+    <a target="_blank" href="{{ site.ucsb_url }}">
+      <img src="img/ucsbwave-blue.png" alt="University of California, Santa Barbara">
+    </a>
   </div>
-  <div class="pull_right">
-    <strong>January 2016</strong>
+  <div class="two columns image text_center">
+    <a target="_blank" href="{{ site.ucsb_cs_url }}">
+      <img src="img/ucsb_cs_logo.png" alt="UCSB Computer Science">
+    </a>
   </div>
+  <div class="three columns image text_center">
+    <a target="_blank" href="{{ site.ucsb_racelab_url }}">
+      <img src="img/racelab_logo.png" alt="RACE Lab, UC Santa Barbara">
+    </a>
   </div>
 </div>
-<!-- footer : end -->
+</div>
 
-<!-- Grab Google CDN's jQuery, fall back to local if offline -->
-<!-- 2.0 for modern browsers, 1.10 for .oldie -->
-<script>
-var oldieCheck = Boolean(document.getElementsByTagName('html')[0].className.match(/\soldie\s/g));
-if(!oldieCheck){document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"><\/script>');
-}else{document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"><\/script>');}
-</script>
-<script>
-if(!window.jQuery){if(!oldieCheck){document.write(
-'<script src="bower_components/gumby/js/libs/jquery-2.0.2.min.js"><\/script>');
-}else{document.write('<script src="bower_components/gumby/js/libs/jquery-1.10.1.min.js"><\/script>');}}
-</script>
+{% include social_footer.html %}
 
-<script src="js/gumby.min.js"></script>
+</div>
 
-<!--
-Google's recommended deferred loading of JS
-gumby.min.js contains gumby.js, all UI modules and gumby.init.js
-
-Note: If you opt to use this method of defered loading,
-ensure that any javascript essential to the initial
-display of the page is included separately in a normal
-script tag.
-
-<script type="text/javascript">
-function downloadJSAtOnload() {
-var element = document.createElement("script");
-element.src = "js/libs/gumby.min.js";
-document.body.appendChild(element);
-}
-if (window.addEventListener)
-window.addEventListener("load", downloadJSAtOnload, false);
-else if (window.attachEvent)
-window.attachEvent("onload", downloadJSAtOnload);
-else window.onload = downloadJSAtOnload;
-</script> -->
-
-<script src="bower_components/gumby/js/plugins.js"></script>
-<script src="bower_components/gumby/js/main.js"></script>
-
-<!-- Google Analytics -->
-<script src="js/google_tracker.js"></script>
-
-<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
-   chromium.org/developers/how-tos/chrome-frame-getting-started -->
-<!--[if lt IE 7 ]>
-<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-<![endif]-->
+{% include footer.html %}
 
 </body>
 </html>
