--- a/projects.html
+++ b/projects.html
@@ -1,289 +1,37 @@
+---
+title:  Projects
+description:  >
+  Projects | Dev Nath, Coder at-large. Software Craftsmith at Google.
+  Half Java Junkie, half C++ worshipper and (sic:) one-third Pythonista with
+  a dash of Ruby. Recent Grad from UC Santa Barbara. Go Gauchos!
+keywords: >
+  dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,google,
+  appfolio,mcafee,eeff,encryption,cloud,santa barbara
+---
 <!doctype html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if IE 9]>    <html class="no-js ie9" lang="en"> <![endif]-->
-<!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 9]><!-->
-<html class="no-js" lang="en" itemscope="" itemtype="http://schema.org/Product">
-<!--<![endif]-->
+<html>
 <head>
-  <meta charset="utf-8">
-
-  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-       More info: h5bp.com/b/378 -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title>Dev Nath | Projects</title>
-  <meta name="description" content="Projects | Dev Nath, Coder at-large. Software Craftsmith at Google. Half Java Junkie, half C++ worshipper and (sic:) one-third Pythonista with a dash of Ruby. Recent Grad from UC Santa Barbara. Go Gauchos!">
-  <meta name="keywords" content="dev,dibyendu,nath,dnath,devnath,rd3vnath,acelab,stochss,ucsb,google,appfolio,mcafee,eeff,encryption,cloud,santa barbara">
-  <meta name="author" content="humans.txt">
-
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-
-  <!-- Facebook Metadata /-->
-  <meta property="fb:page_id" content="">
-  <meta property="fb:admins" content="100001639762906" />
-  <meta property="og:image" content="http://dnath.github.io/img/dev_nath.jpg">
-  <meta property="og:description" content="Projects | Dev Nath, Coder at-large. Software Craftsmith at Google. Half Java Junkie, half C++ worshipper and (sic:) one-third Pythonista with a dash of Ruby. Recent Grad from UC Santa Barbara. Go Gauchos!">
-  <meta property="og:title" content="Dev Nath | Projects">
-
-  <!-- Google+ Metadata /-->
-  <meta itemprop="name" content="Dev Nath | Projects">
-  <meta itemprop="description" content="Projects | Dev Nath, Coder at-large. Software Craftsmith at Google. Half Java Junkie, half C++ worshipper and (sic:) one-third Pythonista with a dash of Ruby. Recent Grad from UC Santa Barbara. Go Gauchos!">
-  <meta itemprop="image" content="http://dnath.github.io/img/dev_nath.jpg">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
-  <link rel="stylesheet" href="bower_components/gumby/css/gumby.css">
-
-  <script src="bower_components/gumby/js/libs/modernizr-2.6.2.min.js"></script>
-
-  <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+{% include head.html %}
 </head>
-
 <body>
-<!-- super wrapper : start -->
+
 <div class="super_wrapper">
+{% include header.html %}
 
-  <!-- navbar -->
-  <div class="navcontain">
-    <div class="navbar" gumby-fixed="top" id="nav1">
-    <div class="row">
-      <a class="toggle" gumby-trigger="#nav1 &gt; .row &gt; ul" href="#"><i class="icon-menu"></i></a>
-      <h1 class="four columns logo">
-        <a href="http://dnath.github.io/"><img alt="Dev Nath" src="img/dev_dnath_logo.png" gumby-retina=""></a>
-      </h1>
-      <ul class="eight columns main-nav">
-        <li class="pull_right padding_left_20">
-          <p class="medium pretty default btn icon-github icon-left">
-            <a target="_blank" href="https://github.com/dnath">GitHub</a>
-          </p>
-        </li>
-        <li class="pull_right"><a href="#">Projects</a></li>
-        <li class="pull_right"><a href="research.html">Research</a></li>
-        <li class="pull_right"><a href="index.html">Home</a></li>
-      </ul>
-    </div>
-    </div>
-  </div>
-  <!-- navbar -->
+<div class="row padding_top_20">
 
-  <!-- social -->
-  <div class="wrapper shaded">
-  <div class="row">
-    <div class="metro btn default rounded pull_left">
-      <a href="files/resume_dibyendu_nath.pdf">Resume <i class="icon-download"></i></a>
-    </div>
-    <div class="metro btn gplus pull_right">
-      <a target="_blank" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB">
-        <i class="social icon-gplus"></i><span class="hide">Google+ | Dev Nath</span>
-      </a>
-    </div>
-    <div class="metro btn linkedin pull_right">
-      <a target="_blank" href="https://www.linkedin.com/in/dev-nath">
-        <i class="social icon-linkedin"></i><span class="hide">LinkedIn | Dev Nath</span>
-      </a>
-    </div>
-    <div class="metro btn twitter pull_right">
-      <a target="_blank" href="https://twitter.com/askdevnath">
-        <i class="social icon-twitter"></i><span class="hide">Twitter | Dev Nath</span>
-      </a>
-    </div>
-  </div>
-  </div>
-  <!-- social -->
-
-  <div class="row padding_top_20">
-
-    <!-- Google -->
-    <div class="row">
-      <div class="three columns image rounded text_center">
-        <img src="img/google_logo.gif" alt="Google"/>
-        <div style="padding-top:0px">
-          <h5 class="text_center">
-            <a class="default_color red_glow" href="http://www.google.com/">
-              <i class="icon-globe"></i>Google Inc.
-            </a>
-          </h5>
-        </div>
-      </div>
-      <article class="nine columns">
-        <div class="row">
-          <h3><strong>Google Shopping:</strong> Serving Infrastructure</h3>
-          <h5>Software Engineer, <a class="red_glow" href="http://www.google.com">Google Inc.</a></h5>
-          <h6>August 2015 - Present</h6>
-        </div>
-        <div class="padding_top_10">
-          <p>Member of the development team for Google Shopping Serving Infrastructure.</p>
-      </div>
-      </article>
-    </div>
-
-    <!-- Appfolio -->
-    <div class="row padding_top_40">
-      <div class="three columns image rounded text_center">
-        <img src="img/af_apm.png" alt="AppFolio Property Manager"/>
-        <div class="padding_top_20">
-          <h5 class="text_center">
-            <a class="default_color red_glow" href="http://www.appfolio.com/">
-              <i class="icon-globe"></i>AppFolio Inc.
-            </a>
-          </h5>
-        </div>
-      </div>
-      <article class="nine columns">
-        <div class="row">
-          <h3><strong>AppFolio RentMatch:</strong> Pricing Analytics</h3>
-          <h5>Software Engineering Intern, Data Science team, <a class="red_glow" href="http://www.appfolio.com">AppFolio Inc.</a></h5>
-          <h6>June 2014 - September 2014</h6>
-        </div>
-        <div class="padding_top_10">
-          <p>AppFolio provides a web-based Property Management SaaS solution designed to help professional property managers to market and manage their portfolios.</p>
-
-          <ul class="square">
-            <li>
-            Worked in AppFolio’s Pricing Analytics (Data Science) team on finding Rental Unit Similarity using machine learning methods based on features like amenities, associated text, school districts, location, linked census data, etc, extracted from customer data.
-            <li>
-              Built <strong>Super Squirrel,</strong> a <em>MapReduce</em> like framework for collecting and processing data, distributed across AppFolio’s data centers.
-            </li>
-            <li>
-              Developed a Google Glass App <strong>Eyepatch,</strong> as a 24-hr hackathon project for making voice activated property inspections using AppFolio's services as backends.
-            </li>
-          </ul>
-        </div>
-      </article>
-    </div>
-
-    <!-- McAfee -->
-    <div class="row padding_top_40">
-      <div class="three columns image rounded text_center">
-        <img src="img/mcafee_cdd.png" alt="McAfee Complete Data Protection, formerly known as Endpoint Encryption for Files & Folders"/>
-        <div class="padding_top_20">
-          <h5 class="text_center">
-            <a class="default_color red_glow" href="http://www.mcafee.com/us/products/complete-data-protection.aspx"><i class="icon-globe"></i>McAfee Complete Data Protection</a>
-          </h5>
-          <h6 class="text_center">Formerly known as <br/>McAfee EEFF</h6>
-        </div>
-      </div>
-      <article class="nine columns">
-        <div class="row">
-          <h3><strong>McAfee Endpoint Encryption for Files &amp; Folders</strong></h3>
-          <h5>Software Development Engineer, EEFF team, <a class="red_glow" href="http://www.mcafee.com">McAfee Inc. (<i>aka</i> Intel Security)</a></h5>
-          <h6>February 2012 - August 2013</h6>
-        </div>
-        <div class="padding_top_10">
-          <p>EEFF, now part of McAfee Complete Data Protection is an enterprize encryption product for Windows endpoints, controlled by McAfee ePO servers. It intercepts read/write calls to the file system using a filter driver and encrypts/decrypts data according to policies set.</p>
-
-          <ul class="square">
-            <li>
-              Worked on releases 3.2.9, 4.1 &amp; 4.2 – contributed to client-side (including filter driver development) as well as server-side ePO management codebase.
-            <li>
-              Developed <strong>'Kill Pill'</strong> Proof of Concept – remote deactivation and secure wiping of encrypted USB devices (EERM: endpoint encryption for removable media).
-            </li>
-            <li>
-              Other features developed include <strong>Key Cache Expiry,</strong> code overhaul for <strong>FIPS 140-2</strong> encryption standard compliance, Role-Based Key Management, enhanced encrypted removable media recovery, etc.
-            </li>
-          </ul>
-        </div>
-      </article>
-    </div>
-
-  </div>
-
-  <!-- social footer -->
-  <div class="row">
-  <div class="text_center social_footer_box">
-  <a target="_blank" class="social_footer" href="https://twitter.com/d3vnath">
-    <i class="icon-twitter no_margin"></i>Twitter<span class="hide">Twitter | Dev Nath</span>
-  </a> |
-  <a target="_blank" class="social_footer" href="https://www.facebook.com/d3vnath">
-    <i class="icon-facebook-squared no_margin"></i>Facebook<span class="hide">Facebook | Dev Nath</span>
-  </a> |
-  <a target="_blank" class="social_footer" href="https://www.linkedin.com/in/d3vnath">
-    <i class="icon-linkedin no_margin"></i>LinkedIn<span class="hide">LinkedIn | Dev Nath</span>
-  </a> |
-  <a target="_blank" class="social_footer" href="https://github.com/dnath">
-    <i class="icon-github no_margin"></i>Github<span class="hide">GitHub | Dev Nath</span>
-  </a> |
-  <a target="_blank" class="social_footer" href="https://plus.google.com/u/0/+DibyenduNath-Dev-UCSB">
-    <i class="icon-gplus no_margin"></i>Google+<span class="hide">Google+ | Dev Nath</span>
-  </a> |
-  <a target="_blank" class="social_footer" href="https://www.instagram.com/dev.nath">
-    <i class="icon-instagram no_margin"></i>Instagram<span class="hide">Instagram | Dev Nath</span>
-  </a>
-  </div>
-  </div>
-
-  <!-- padding for footer -->
-  <div class="row footer_padding"></div>
+{% include google.html %}
+{% include appfolio.html %}
+{% include stochss.html %}
+{% include mcafee.html %}
 
 </div>
-<!-- super wrapper : end -->
 
-<!-- footer : start -->
-<div class="wrapper shaded footer">
-  <div class="row">
-  <div class="pull_left">
-    <strong>Dev Nath &copy; 2016</strong>
-  </div>
-  <div class="pull_right">
-    <strong>January 2016</strong>
-  </div>
-  </div>
+{% include social_footer.html %}
+
 </div>
-<!-- footer : end -->
 
-<!-- Grab Google CDN's jQuery, fall back to local if offline -->
-<!-- 2.0 for modern browsers, 1.10 for .oldie -->
-<script>
-var oldieCheck = Boolean(document.getElementsByTagName('html')[0].className.match(/\soldie\s/g));
-if(!oldieCheck){document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"><\/script>');
-}else{document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"><\/script>');}
-</script>
-<script>
-if(!window.jQuery){if(!oldieCheck){document.write(
-'<script src="bower_components/gumby/js/libs/jquery-2.0.2.min.js"><\/script>');
-}else{document.write('<script src="bower_components/gumby/js/libs/jquery-1.10.1.min.js"><\/script>');}}
-</script>
-
-<script src="js/gumby.min.js"></script>
-
-<!--
-Google's recommended deferred loading of JS
-gumby.min.js contains gumby.js, all UI modules and gumby.init.js
-
-Note: If you opt to use this method of defered loading,
-ensure that any javascript essential to the initial
-display of the page is included separately in a normal
-script tag.
-
-<script type="text/javascript">
-function downloadJSAtOnload() {
-var element = document.createElement("script");
-element.src = "js/libs/gumby.min.js";
-document.body.appendChild(element);
-}
-if (window.addEventListener)
-window.addEventListener("load", downloadJSAtOnload, false);
-else if (window.attachEvent)
-window.attachEvent("onload", downloadJSAtOnload);
-else window.onload = downloadJSAtOnload;
-</script> -->
-
-<script src="bower_components/gumby/js/plugins.js"></script>
-<script src="bower_components/gumby/js/main.js"></script>
-
-<!-- Google Analytics -->
-<script src="js/google_tracker.js"></script>
-
-<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
-   chromium.org/developers/how-tos/chrome-frame-getting-started -->
-<!--[if lt IE 7 ]>
-<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-<![endif]-->
+{% include footer.html %}
 
 </body>
 </html>
