--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ I was working in <a class="red_glow" href="{{ site.ucsb_racelab_url }}">RACE Lab
 advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
 and <a class="red_glow" href="https://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a>
 Before that, I was a Software Engineering Intern at
-'<a class="red_glow" href="https://www.appfolio.com">AppFolio,</a>
+<a class="red_glow" href="https://www.appfolio.com">AppFolio,</a>
 working on their data analytics team.
 </article>
 </div>
