--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description:  >
   Occasional Fauxtographer, with a pretty bad case of Epicurea.
 keywords: >
   dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,cloud,
-  santa barbara,google
+  santa barbara,google,google shopping
 ---
 <!doctype html>
 <html>
@@ -38,7 +38,7 @@ one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
 <p>I'm a Software Engineer at
 <a class="red_glow" href="https://www.google.com">Google,</a>
 based out of Mountain View, California, working on Google Shopping Ads Serving
-infrastructure. Till quite recently, I was a graduate student at the
+infrastructure. A few years before, I was a graduate student at the
 <a class="red_glow" href="{{ site.ucsb_url }}">University of California, Santa Barbara,</a>
 pursuing a Master's in <a class="red_glow" href="{{ site.ucsb_cs_url }}">Computer Science.</a>
 I was working in <a class="red_glow" href="{{ site.ucsb_racelab_url }}">RACE Lab</a>,
