--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,11 @@
 ---
-title:  Projects
+title:  Recent Projects
 description:  >
-  Projects | Dev Nath, Coder at-large. Software Craftsmith at Google.
+  Recent Projects | Dev Nath, Coder at-large. Software Craftsmith at Google.
   Half Java Junkie, half C++ worshipper and (sic:) one-third Pythonista with
-  a dash of Ruby. Recent Grad from UC Santa Barbara. Go Gauchos!
+  a dash of Ruby. Recent graduate from UC Santa Barbara.
 keywords: >
-  dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,google,
+  dev,dibyendu,nath,dnath,devnath,racelab,stochss,ucsb,google, google shopping,
   appfolio,mcafee,eeff,encryption,cloud,santa barbara
 ---
 <!doctype html>
