--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ...
 half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:)
 one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
 
+<h3>Bio</h3>
+
 <p>I'm a Software Engineer at
 <a class="red_glow" href="https://www.google.com">Google,</a>
 based out of Mountain View, California, working on Google Shopping Ads Serving
