--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@ keywords: >
   <img src="img/devnath.jpg" alt="{{ site.fullname }}"/>
   </div>
   <h5 class=""><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</h5>
-  <h5 class=""><a href="https://scholar.google.com/citations?user=xnfLwIAAAAAJ&hl=en">
-    <i class="icon-graduation-cap"></i> Google Scholar </a></h5>
+  <h5 class="">
+    <a arget="_blank" class="gray_link" href="https://scholar.google.com/citations?user=xnfLwIAAAAAJ&hl=en">
+      <i class="icon-graduation-cap"></i> Google Scholar
+    </a></h5>
 </div>
 <article class="eight columns padding_bottom_20">
 <h2>Hello, World !</h2>
