--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@ keywords: >
   <div class="image rounded">
   <img src="img/devnath.jpg" alt="{{ site.fullname }}"/>
   </div>
-  <h5 class=""><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</h5>
   <h5 class="">
-    <a arget="_blank" class="gray_link" href="https://scholar.google.com/citations?user=xnfLwIAAAAAJ&hl=en">
-      <i class="icon-graduation-cap"></i> Google Scholar
+    <strong><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</strong>
+  </h5>
+  <h5 class="">
+    <a target="_blank" class="gray_link" href="https://scholar.google.com/citations?user=xnfLwIAAAAAJ&hl=en">
+      <strong><i class="icon-graduation-cap"></i> Google Scholar</strong>
     </a></h5>
 </div>
 <article class="eight columns padding_bottom_20">
