--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@ keywords: >
   <div class="image rounded">
   <img src="img/devnath.jpg" alt="{{ site.fullname }}"/>
   </div>
-  <h5 class="">
+  <span>
     <strong><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</strong>
-  </h5>
-  <h5 class="">
+  </span>
+  <span>
     <a target="_blank" class="gray_link" href="https://scholar.google.com/citations?user=xnfLwIAAAAAJ&hl=en">
       <strong><i class="icon-graduation-cap"></i> Google Scholar</strong>
-    </a></h5>
+    </a>
+  </span>
 </div>
 <article class="eight columns padding_bottom_20">
 <h2>Hello, World !</h2>
