--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ keywords: >
   <img src="img/devnath.jpg" alt="{{ site.fullname }}"/>
   </div>
   <span>
-    <strong><i class="icon-mail"></i> dev . nath . cs {at} gmail . com</strong>
+    <i class="icon-mail"></i> dev . nath . cs {at} gmail . com
   </span>
   <span>
     <a target="_blank" class="gray_link" href="https://scholar.google.com/citations?user=xnfLwIAAAAAJ&hl=en">
-      <strong><i class="icon-graduation-cap"></i> Google Scholar</strong>
+      <i class="icon-graduation-cap"></i> Google Scholar
     </a>
   </span>
 </div>
