--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@ keywords: >
   <div class="image rounded">
   <img src="img/devnath.jpg" alt="{{ site.fullname }}"/>
   </div>
-  <span>
+  <div class="four columns">
     <i class="icon-mail"></i> dev . nath . cs {at} gmail . com
-  </span>
-  <span>
+  </div>
+  <div class="four columns">
     <a target="_blank" class="gray_link" href="https://scholar.google.com/citations?user=xnfLwIAAAAAJ&hl=en">
       <i class="icon-graduation-cap"></i> Google Scholar
     </a>
-  </span>
+  </div>
 </div>
 <article class="eight columns padding_bottom_20">
 <h2>Hello, World !</h2>
