--- a/index.html
+++ b/index.html
@@ -37,26 +37,55 @@ keywords: >
 <article class="eight columns padding_bottom_20">
 <h2>Hello, World !</h2>
 
-<p>Hi, I'm <strong>Dev</strong>.
-First things first, a small intro from yours truly.
-To keep it brief and simple, I'm a <strong>Software Craftsmith</strong> ...
+<p>
+Hi, I'm <strong>Dev</strong>. I work at Google. My interests are
+distributed system infrastructure, performance monitoring and large-scale
+machine learning platforms.
+To keep it short and simple, I'm a <strong>Software Craftsmith</strong> ...
 half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:)
-one-third <em>Pythonista</em> with a dash of <em>Ruby.</em></p>
+one-third <em>Pythonista</em> with a dash of <em>Ruby.</em>
+
+</p>
 
 <h3>Bio</h3>
 
-<p>I'm a Software Engineer at
+<p>
+Dev is a Software Engineer at
 <a class="red_glow" href="https://www.google.com">Google,</a>
-based out of Mountain View, California, working on Google Shopping Ads Serving
-infrastructure. A few years before, I was a graduate student at the
-<a class="red_glow" href="{{ site.ucsb_url }}">University of California, Santa Barbara,</a>
-pursuing a Master's in <a class="red_glow" href="{{ site.ucsb_cs_url }}">Computer Science.</a>
-I was working in <a class="red_glow" href="{{ site.ucsb_racelab_url }}">RACE Lab</a>,
-advised by <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
+based out of Mountain View, California. He works on system scalability and
+performance improvements for Google Shopping Ads serving infrastructure.
+
+He earned his MS degree in Computer Science in 2015 from the
+<a class="red_glow" href="{{ site.ucsb_cs_url }}">CS Dept.</a> at the
+<a class="red_glow" href="{{ site.ucsb_url }}">University of California,
+Santa Barbara. At UC Santa Barbara, he worked at the
+<a class="red_glow" href="{{ site.ucsb_racelab_url }}">RACE Lab</a>
+advised by
+<a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
 and <a class="red_glow" href="https://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a>
-Before that, I was a Software Engineering Intern at
-<a class="red_glow" href="https://www.appfolio.com">AppFolio,</a>
-working on their data analytics team.
+on <a class="red_glow" href="https://www.stochss.org">StochSS</a>.
+
+StochSS was a NIH funded project whose aim is to provide an integrated
+development environment (IDE) for running discrete stochastic simulations of
+biochemical networks and population systems in cloud computing environments.
+Dev's chief contribution was a generic cloud computing framework
+for configuring virtual machines and deploying arbitrary scientific simulation
+programs in the cloud (public or private) by wrapping the source code as
+a web service.
+
+Dev also has been a software engineering intern
+<a class="red_glow" href="https://www.appfolio.com">AppFolio</a>, a SaaS
+startup, focused on property management vertical.
+At Appfolio, he worked on their data analytics team for property
+rental price prediction.
+</p>
+
+<p>
+Prior to Google and UCSB, he worked at McAfee on enterprise data protection
+products, which included transparent enforceable encryption of files
+and removable media.
+</p>
+
 </article>
 </div>
 
