--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ keywords: >
 {% include header.html %}
 
 <div class="row padding_top_20">
+</div>
+
+<div class="row">
+
 <div class="four columns">
   <div class="image rounded">
   <img src="img/devnath.jpg" alt="{{ site.fullname }}"/>
@@ -33,11 +37,10 @@ keywords: >
       <i class="icon-graduation-cap"></i> Google Scholar
     </a>
   </span>
-  <br />
-  {% include twitter_timeline.html %}
 </div>
 
-<article class="eight columns padding_bottom_20">
+<div class="eight columns">
+<article class="padding_bottom_20">
 <h2>Hello, World !</h2>
 
 <p>
@@ -90,8 +93,11 @@ and removable media.
 </p>
 
 </article>
+</div>
 
+<!-- Twitter and logos -->
 <div class="row">
+{% include twitter_timeline.html %}
 <div class="eight columns padding_left_20 padding_top_20">
   <div class="five columns image text_center">
     <a target="_blank" href="{{ site.ucsb_url }}">
@@ -108,7 +114,6 @@ and removable media.
       <img src="img/racelab_logo.png" alt="RACE Lab, UC Santa Barbara">
     </a>
   </div>
-</div>
 </div>
 </div>
 
