--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ keywords: >
       <i class="icon-graduation-cap"></i> Google Scholar
     </a>
   </span>
+  {% include twitter_timeline.html %}
 </div>
 
 <div class="eight columns">
@@ -59,7 +60,7 @@ one-third <em>Pythonista</em> with a dash of <em>Ruby.</em>
 Dev is a Software Engineer at
 <a class="red_glow" href="https://www.google.com">Google,</a>
 based out of Mountain View, California. He works on system scalability and
-performance improvements for Google Shopping Ads serving infrastructure.
+performance tuning for Google Shopping Ads serving infrastructure.
 
 He earned his MS degree in Computer Science in 2015 from the
 <a class="red_glow" href="{{ site.ucsb_cs_url }}">CS Dept.</a> at the
@@ -71,7 +72,7 @@ advised by
 and <a class="red_glow" href="https://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a>
 on <a class="red_glow" href="https://www.stochss.org">StochSS</a>.
 
-StochSS was a NIH funded project whose aim is to provide an integrated
+StochSS is a NIH funded project whose aim is to provide an integrated
 development environment (IDE) for running discrete stochastic simulations of
 biochemical networks and population systems in cloud computing environments.
 Dev's chief contribution was a generic cloud computing framework
@@ -95,9 +96,8 @@ and removable media.
 </article>
 </div>
 
-<!-- Twitter and logos -->
 <div class="row">
-{% include twitter_timeline.html %}
+<div class="four columns"></div>
 <div class="eight columns padding_left_20 padding_top_20">
   <div class="five columns image text_center">
     <a target="_blank" href="{{ site.ucsb_url }}">
