--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@ keywords: >
       <i class="icon-graduation-cap"></i> Google Scholar
     </a>
   </span>
-  {% include twitter_timeline.html %}
+  <div class="dont-show-me-on-phones">
+    {% include twitter_timeline.html %}
+  </div>
 </div>
 
 <div class="eight columns">
