--- a/index.html
+++ b/index.html
@@ -47,12 +47,9 @@ keywords: >
 <h2>Hello, World !</h2>
 
 <p>
-Hi, I'm <strong>Dev</strong>. I work at Google. My interests are
-distributed system infrastructure, performance monitoring and large-scale
+Hi, I'm <strong>Dev</strong>. I work at Google. My areas of interest include
+distributed system infrastructure, performance tuning and large-scale
 machine learning platforms.
-To keep it short and simple, I'm a <strong>Software Craftsmith</strong> ...
-half <em>Java Junkie,</em> half <em>C++ worshipper</em> and (sic:)
-one-third <em>Pythonista</em> with a dash of <em>Ruby.</em>
 
 </p>
 
@@ -73,15 +70,19 @@ advised by
 <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
 and <a class="red_glow" href="https://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a>
 on <a class="red_glow" href="https://www.stochss.org">StochSS</a>.
+</p>
 
+<p>
 StochSS is a NIH funded project whose aim is to provide an integrated
 development environment (IDE) for running discrete stochastic simulations of
 biochemical networks and population systems in cloud computing environments.
-Dev's chief contribution was a generic cloud computing framework
+Dev's contribution was a generic cloud computing framework
 for configuring virtual machines and deploying arbitrary scientific simulation
 programs in the cloud (public or private) by wrapping the source code as
 a web service.
+</p>
 
+<p>
 Dev also has been a software engineering intern
 <a class="red_glow" href="https://www.appfolio.com">AppFolio</a>, a SaaS
 startup, focused on property management vertical.
