--- a/index.html
+++ b/index.html
@@ -64,16 +64,19 @@ performance tuning for Google Shopping Ads serving infrastructure.
 He earned his MS degree in Computer Science in 2015 from the
 <a class="red_glow" href="{{ site.ucsb_cs_url }}">CS Dept.</a> at the
 <a class="red_glow" href="{{ site.ucsb_url }}">University of California,
-Santa Barbara. At UC Santa Barbara, he worked at the
+Santa Barbara.</a>
+
+At UC Santa Barbara, he worked at the
 <a class="red_glow" href="{{ site.ucsb_racelab_url }}">RACE Lab</a>
 advised by
 <a class="red_glow" href="http://www.cs.ucsb.edu/~ckrintz/">Prof. Chandra Krintz</a>
 and <a class="red_glow" href="https://www.cs.ucsb.edu/~rich/">Prof. Rich Wolski.</a>
-on <a class="red_glow" href="https://www.stochss.org">StochSS</a>.
+on StochSS.
 </p>
 
 <p>
-StochSS is a NIH funded project whose aim is to provide an integrated
+<a class="red_glow" href="https://www.stochss.org">StochSS</a>
+is a NIH funded project whose aim is to provide an integrated
 development environment (IDE) for running discrete stochastic simulations of
 biochemical networks and population systems in cloud computing environments.
 Dev's contribution was a generic cloud computing framework
@@ -86,8 +89,8 @@ a web service.
 Dev also has been a software engineering intern
 <a class="red_glow" href="https://www.appfolio.com">AppFolio</a>, a SaaS
 startup, focused on property management vertical.
-At Appfolio, he worked on their data analytics team for property
-rental price prediction.
+At Appfolio, he worked on property rental price prediction as a member of their
+data analytics team.
 </p>
 
 <p>
